# test_actions

./: .cppcheck_suppressions  .gitignore  CMakeLists.txt  README.md  project.yml
.github/workflows/: ci.yml
docs/: DEV_CYCLE.md  PROJECT_STRUCTURE.md  QUICKSTART.md
libs/: CMakeLists.txt
src/app/: CMakeLists.txt  app_blinky.c  app_blinky.h  app_motor.c  app_motor.h  firmware.c  main.c
src/hal/: CMakeLists.txt  board_config.h  config.c  config.h  hal_common.h  hal_gpio.c  hal_gpio.h  i2c_safe.c  i2c_safe.h
src/middleware/: CMakeLists.txt  common_rtos.c  common_rtos.h  logging.c  motor.c  motor.h  mw_led.c  mw_led.h
test/HIL/: CMakeLists.txt  test_hw_gpio.c  test_motor.c
test/SIL/: CMakeLists.txt  test_blinky.c  test_blinky_host
test/SIL/mock/hardware/: gpio.h  sync.h
test/SIL/mock/pico/: multicore.h  stdlib.h
tools/: get_impacted_tests.py  run_test.ps1  run_test.sh
